client/ios.css
@import url(https://fonts.googleapis.com/css2?family=Roboto);

main {
  width: 80%;
  margin: auto;
  margin-top: 50px;

}

#games {
  width: 100%;
  height: 400px;
  overflow: scroll;
  border: solid 1px #e5e5eb;
  border-radius: 10px;
  display: inline-block;
}

.createForm {
   height: 30px;
   border-radius: 15px;
     font-size: 20px;
     text-align: center;
}

form {
  font-size: 20px;
}

#chatBox {
  width: 100%;
  height: 300px;
  overflow: scroll;
  border: solid 1px #e5e5eb;
  border-radius: 10px;

}


p {
  margin:0;
  padding:0;
  padding-top: 5px;
  padding-left: 10px;
  font-size:13px;
  line-height:15px;
}


form {
  text-align: center;
  display: flex;
  width: 100%;
  margin: auto;
}


button {
  border-radius: 10px;
  color: #0a93f6;
  background-color: transparent;
  padding: 10px;
  text-decoration: none;
  font-size: 16px;
}

/* All of the buttons - change background-color only */
#send-button {
  background-color: #f2faff;
  cursor: pointer;
}

#createGame {
  margin: auto;
  display: block;
  background-color: #f2faff;
  cursor: pointer;
}

#start {
  background-color: #f2faff;
  cursor: pointer;
}

#leave {
  background-color: #f2faff;
  cursor: pointer;
}

#submitAns {
  background-color: #f2faff;
  cursor: pointer;
}

.submitBox {
  width: 100%;
  border: solid 1px #e5e5eb;
  border-radius: 10px;
  padding: 5px;
}

.gameBtn{
  width:auto;
  height:75px;
  border: solid 1px #e5e5eb;
  border-radius: 10px;
  cursor: pointer;
}

#img {
  float: right;
  width: 0%;
  height: 400px;
  overflow: scroll;
  border: solid 1px #e5e5eb;
  border-radius: 10px;
  display: none;
}

.leftSide {
  clear: both;
}

.img-center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 80%;
  height: auto;
}

#question{
  width: 100%;
  height: 400px;
  overflow: scroll;
  border: solid 1px #e5e5eb;
  border-radius: 10px;
  float: left;
  display: inline-block;
}
#questionStatement {
  font-size: x-large;
  line-height: 1.5em;
}
#names{
  width: 100%;
  height: 400px;
  overflow: scroll;
  border: solid 1px #e5e5eb;
  border-radius: 10px;
  display: inline-block;

}
#universalNames{
  width: 100%;
  height: 400px;
  overflow: scroll;
  border: solid 1px #e5e5eb;
  border-radius: 10px;
  display: inline-block;

}
.leftSide {
  float: left;
  width: 80%;
}
.rightSide {
  float: right;
  width: 20%;
}

/*.collapsible {
  border-radius: 10px;

  padding: 10px;
  text-decoration: none;
  font-size: 16px;
  cursor: pointer;
}*/

#toggleGame{
  color: #0a93f6;
  background-color: #f2faff;
  cursor: pointer;

}

.content {
  padding: 0 18px;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
  background-color: #f1f1f1;
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: absolute; /* Stay in place */
  z-index: 10; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  /*overflow: auto; /* Enable scroll if needed */

  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
  background-color: #fefefe;
  margin: auto;
  padding: 20px;
  padding-top: 1px;
  border: 1px solid #888;
  width: 400px;
}

/* The Close Button */
.close {
  color: #aaaaaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #C75A50;
  text-decoration: none;
  cursor: pointer;
}

tr>td {
  padding: .1em;
  padding-bottom: 1em;
}

.labeller {
  background-color: #eafbfb;
  color: #4f66c2;
  padding-bottom: 10px;
  border-radius: 5px;
  font-weight: 700;
}

body{
  background-color: #f2f4f51c;
  font-family: roboto;
}

input {
  font-family: roboto;
}

*, *:before, *:after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.buttons {
  position: absolute;
  top: 23px;
  left: 100px;
  margin-left: 10%;
  text-align: center;
  border-radius: 30px;
}

.blob-btn {
  z-index: 1;
  position: relative;
  padding: 20px 46px;
  margin-bottom: 30px;
  text-align: center;
  text-transform: uppercase;
  color: #f77763;
  font-size: 16px;
  font-weight: bold;
  background-color: transparent;
  outline: none;
  border: none;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
  cursor: pointer;
  border-radius: 30px;
}
.blob-btn:before {
  content: "";
  z-index: 1;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  border: 2px solid #f77763;
  border-radius: 30px;
}
.blob-btn:after {
  content: "";
  z-index: -2;
  position: absolute;
  left: 3px;
  top: 3px;
  width: 100%;
  height: 100%;
  -webkit-transition: all 0.3s 0.2s;
  transition: all 0.3s 0.2s;
  border-radius: 30px;
}
.blob-btn:hover {
  color: #FFFFFF;
  border-radius: 30px;
}
.blob-btn:hover:after {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  left: 0;
  top: 0;
  border-radius: 30px;
}
.blob-btn__inner {
  z-index: -1;
  overflow: hidden;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  border-radius: 30px;
  background: #ffffff;
}
.blob-btn__blobs {
  position: relative;
  display: block;
  height: 100%;
  -webkit-filter: url("#goo");
          filter: url("#goo");
}
.blob-btn__blob {
  position: absolute;
  top: 2px;
  width: 25%;
  height: 100%;
  background: #f77763;
  border-radius: 100%;
  -webkit-transform: translate3d(0, 150%, 0) scale(1.7);
          transform: translate3d(0, 150%, 0) scale(1.7);
  -webkit-transition: -webkit-transform 0.45s;
  transition: -webkit-transform 0.45s;
  transition: transform 0.45s;
  transition: transform 0.45s, -webkit-transform 0.45s;
}
@supports ((-webkit-filter: url("#goo")) or (filter: url("#goo"))) {
  .blob-btn__blob {
    -webkit-transform: translate3d(0, 150%, 0) scale(1.4);
            transform: translate3d(0, 150%, 0) scale(1.4);
  }
}
.blob-btn__blob:nth-child(1) {
  left: 0%;
  -webkit-transition-delay: 0s;
          transition-delay: 0s;
}
.blob-btn__blob:nth-child(2) {
  left: 30%;
  -webkit-transition-delay: 0.08s;
          transition-delay: 0.08s;
}
.blob-btn__blob:nth-child(3) {
  left: 60%;
  -webkit-transition-delay: 0.16s;
          transition-delay: 0.16s;
}
.blob-btn__blob:nth-child(4) {
  left: 90%;
  -webkit-transition-delay: 0.24s;
          transition-delay: 0.24s;
}
.blob-btn:hover .blob-btn__blob {
  -webkit-transform: translateZ(0) scale(1.7);
          transform: translateZ(0) scale(1.7);
}
@supports ((-webkit-filter: url("#goo")) or (filter: url("#goo"))) {
  .blob-btn:hover .blob-btn__blob {
    -webkit-transform: translateZ(0) scale(1.4);
            transform: translateZ(0) scale(1.4);
  }
}

